--- a/IOTHNIC/style.css
+++ b/IOTHNIC/style.css
@@ -2,3 +2,12 @@
     box-sizing:border-box;
 }
 
+body {
+    background-color: #9f8ff7
+}
+
+h1{
+    font-weight:bold;
+    font-size:30px;
+    font-family:'Cascadia Mono'
+}
